Updated the css page

--- a/Contact.html
+++ b/Contact.html
@@ -1,10 +1,10 @@
+
 <!doctype html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
-  <title>Tim Fisher's Portfolio</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <title>Contact | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Tim Fisher</a>
+      <a href="index.html" id="logo">Your Name</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -49,7 +49,7 @@
 
   <footer>
     <div class="container">
-      Tim Fisher &copy; 
+      Copyright &copy; 
     </div>
   </footer>
 </body>
