--- a/index.html
+++ b/index.html
@@ -4,28 +4,53 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>About | Your Name</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
+    <!-- make all these class -->
+  <div class="row">
+    <header id="masthead"> 
+        <div class="container Navbar">
+          <a href="index.html" id="logo">Tim Fisher</a>
+          
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="../bootstrap-portfolio/index.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../bootstrap-portfolio/portfolio.html">portfolio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../bootstrap-portfolio/Contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </header>
+  </div>
+  
+    
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <div id="main-container" class="container">
+    <div id="main-container" class="container body">
     <section class="main-section">
-      <h1>About Me</h1>
+        <div class="row top buffer"> 
+          <div class="col-12" id="AboutMe">
+            <h1>About Me</h1>
+            <hr size="5">
+        </div>
+    </div>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/Tim kiss.JPG" class="auth-image" alt="Tim Fisher">
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
 
@@ -37,9 +62,14 @@
 
   </div>
 
-  <footer>
+  <!-- <footer>
     <div class="container">
       Copyright &copy; 
+    </div>
+  </footer> -->
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted">TimFisher &copy;</span>
     </div>
   </footer>
 </body>
