--- a/Contact.html
+++ b/Contact.html
@@ -11,16 +11,32 @@
 
 <body>
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
+    <div class="row">
+        <header id="masthead"> 
+            <div class="container Navbar">
+              <a href="index.html" id="logo">Tim Fisher</a>
+              
+              <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="../bootstrap-portfolio/index.html">About <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="../bootstrap-portfolio/portfolio.html">portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="../bootstrap-portfolio/Contact.html">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+            </div>
+          </header>
+      </div>
 
   <div id="main-container" class="container">
     <section class="main-section">
