--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <header id="masthead"> 
         <div class="container Navbar">
           <a href="index.html" id="logo">Tim Fisher</a>
-          
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -50,7 +49,8 @@
         </div>
     </div>
 
-      <img src="assets/images/Tim kiss.JPG" class="auth-image" alt="Tim Fisher">
+      <!-- <img src="assets/images/Tim kiss.JPG" class="auth-image img-fluid" alt="Tim Fisher"> -->
+      <img src="assets/images/Tim kiss.JPG" class="img-fluid" alt="Responsive image">
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
 
@@ -62,11 +62,7 @@
 
   </div>
 
-  <!-- <footer>
-    <div class="container">
-      Copyright &copy; 
-    </div>
-  </footer> -->
+
   <footer class="footer mt-auto py-3">
     <div class="container">
       <span class="text-muted">TimFisher &copy;</span>
