Shifted the logo to the right

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         </div>
     </div>
 
-      <!-- <img src="assets/images/Tim kiss.JPG" class="auth-image img-fluid" alt="Tim Fisher"> -->
-      <img src="assets/images/Tim kiss.JPG" class="img-fluid" alt="Responsive image">
+      <div class="Mainimage">
+        <img src="assets/images/Tim kiss.JPG" class="img-fluid" alt="TimFisher">
+    </div>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
 
