--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="masthead"> 
         <div class="container Navbar">
           <a href="index.html" id="logo">Tim Fisher</a>
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light Navlinks">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
