--- a/Contact.html
+++ b/Contact.html
@@ -63,9 +63,9 @@
 
   </div>
 
-  <footer>
+  <footer class="footer mt-auto py-3">
     <div class="container">
-      Copyright &copy; 
+      <span class="text-muted">TimFisher &copy;</span>
     </div>
   </footer>
 </body>
