Updated the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,31 +43,45 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" class="img-fluid" alt="Word Guess">
 
-        <h3>Word Guess</h3>
+        <div class= "wordBoxes">
+            <h3>Word Game</h3>
+        </div>
       </div>
+
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" class="img-fluid" alt="RPG Game">
 
-        <h3>RPG Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <div class= "wordBoxes">
+            <h3>RPG Game</h3>
+        </div>
+    </div>
 
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+    <div class="work">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" class="img-fluid" alt="Trivia Game">
 
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <div class= "wordBoxes">
+            <h3>Trivia Game</h3>
+        </div>
+    </div>
 
-        <h3>Rock Paper Scissors</h3>
-      </div>
+    <div class="work">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" class="img-fluid" alt="Rutgers Info">
 
+        <div class= "wordBoxes">
+            <h3>Rutgers Info</h3>
+        </div>
+    </div>
+
+    <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" class="img-fluid" alt="Rock Paper Scissors Game">
+
+        <div class= "wordBoxes">
+            <h3>Rock Paper Scissors</h3>
+        </div>
+    </div>
+       
     </section>
 
   </div>
