--- a/Contact.html
+++ b/Contact.html
@@ -1,42 +1,44 @@
-
 <!doctype html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
   <title>Contact | Your Name</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-    <div class="row">
-        <header id="masthead"> 
-            <div class="container Navbar">
-              <a href="index.html" id="logo">Tim Fisher</a>
-              
-              <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="../bootstrap-portfolio/index.html">About <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="../bootstrap-portfolio/portfolio.html">portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="../bootstrap-portfolio/Contact.html">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-            </div>
-          </header>
+  <div class="row">
+    <header id="masthead">
+      <div class="container Navbar">
+        <a href="index.html" id="logo">Tim Fisher</a>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="../bootstrap-portfolio/index.html">About <span
+                    class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../bootstrap-portfolio/portfolio.html">portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../bootstrap-portfolio/Contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
+    </header>
+  </div>
 
   <div id="main-container" class="container">
     <section class="main-section">
@@ -44,19 +46,25 @@
 
       <form>
         <div class="form-group">
-            <label for="enterName">Name</label>
-            <input type="text" class="form-control" id="EnterName" aria-describedby="nameHelp" placeholder="First and Last Name">
+          <label for="enterName">Name</label>
+          <input type="text" class="form-control" id="EnterName" aria-describedby="nameHelp"
+            placeholder="First and Last Name">
         </div>
         <div class="form-group">
           <label for="enterEmai">Email address</label>
-          <input type="email" class="form-control" id="enterEmai" aria-describedby="emailHelp" placeholder="example@me.com">
-          <small id="emailHelp" class="form-text text-muted">We will never share your information with anyone else.</small>
+          <input type="email" class="form-control" id="enterEmai" aria-describedby="emailHelp"
+            placeholder="example@me.com">
+          <small id="emailHelp" class="form-text text-muted">We will never share your information with anyone
+            else.</small>
         </div>
         <div class="form-group">
-            <label for="commentField">Comments</label>
-            <textarea class="form-control" id="commentField" rows="3" placeholder="Please type any comments here."></textarea>
-          </div>
+          <label for="commentField">Comments</label>
+          <textarea class="form-control" id="commentField" rows="3"
+            placeholder="Please type any comments here."></textarea>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
+        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
       </form>
 
     </section>
@@ -68,9 +76,15 @@
       <span class="text-muted">TimFisher &copy;</span>
     </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
