--- a/portfolio.html
+++ b/portfolio.html
@@ -1,42 +1,44 @@
-
 <!doctype html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
   <title>Portfolio | Your Name</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-    <div class="row">
-        <header id="masthead"> 
-            <div class="container Navbar">
-              <a href="index.html" id="logo">Tim Fisher</a>
-              
-              <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="../bootstrap-portfolio/index.html">About <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="../bootstrap-portfolio/portfolio.html">portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="../bootstrap-portfolio/Contact.html">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-            </div>
-          </header>
+  <div class="row">
+    <header id="masthead">
+      <div class="container Navbar">
+        <a href="index.html" id="logo">Tim Fisher</a>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="../bootstrap-portfolio/index.html">About <span
+                    class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../bootstrap-portfolio/portfolio.html">portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../bootstrap-portfolio/Contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
+    </header>
+  </div>
 
   <div id="main-container" class="container">
     <section class="main-section">
@@ -45,43 +47,43 @@
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-1.jpg" class="img-fluid" alt="Word Guess">
 
-        <div class= "wordBoxes">
-            <h3>Word Game</h3>
+        <div class="wordBoxes">
+          <h3><a href=""></a>Word Game</h3>
         </div>
       </div>
 
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" class="img-fluid" alt="RPG Game">
 
-        <div class= "wordBoxes">
-            <h3>RPG Game</h3>
+        <div class="wordBoxes">
+          <h3><a href=""></a>RPG Game</h3>
         </div>
-    </div>
+      </div>
 
-    <div class="work">
+      <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" class="img-fluid" alt="Trivia Game">
 
-        <div class= "wordBoxes">
-            <h3>Trivia Game</h3>
+        <div class="wordBoxes">
+          <h3><a href=""></a>Trivia Game</h3>
         </div>
-    </div>
+      </div>
 
-    <div class="work">
+      <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" class="img-fluid" alt="Rutgers Info">
 
-        <div class= "wordBoxes">
-            <h3>Rutgers Info</h3>
+        <div class="wordBoxes">
+          <h3><a href=""></a>Rutgers Info</h3>
         </div>
-    </div>
+      </div>
 
-    <div class="work">
+      <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" class="img-fluid" alt="Rock Paper Scissors Game">
 
-        <div class= "wordBoxes">
-            <h3>Rock Paper Scissors</h3>
+        <div class="wordBoxes">
+          <h3><a href=""></a>Rock Paper Scissors</h3>
         </div>
-    </div>
-       
+      </div>
+
     </section>
 
   </div>
@@ -91,9 +93,15 @@
       <span class="text-muted">TimFisher &copy;</span>
     </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 
 </body>
 
