altered the css color scheme

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
       <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi.
         Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
+      <a href="https://github.com/Code-Tim" class="fab fa-github fa-5x"></a>
       <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal"
         data-theme="dark" data-vanity="tim-fisher-0813496"><a class="LI-simple-link"
           href='https://www.linkedin.com/in/tim-fisher-0813496?trk=profile-badge'>Tim Fisher</a></div>
+
 
     </section>
 
@@ -90,6 +92,8 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+  <script src="https://kit.fontawesome.com/6adee2dfd4.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
