--- a/portfolio.html
+++ b/portfolio.html
@@ -45,42 +45,52 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" class="img-fluid" alt="Word Guess">
+        <img src="assets/images/psychic.jpg" class="img-fluid" alt="My Psychic Game">
 
         <div class="wordBoxes">
-          <h3><a href=""></a>Word Game</h3>
+          <h3>
+            <a href="https://code-tim.github.io/My-Psychic-Game/">My Psychic Game</a>
+          </h3>
         </div>
       </div>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" class="img-fluid" alt="RPG Game">
+        <img src="assets/images/mine.jpg" class="img-fluid" alt="Crystal Collector Game">
 
         <div class="wordBoxes">
-          <h3><a href=""></a>RPG Game</h3>
+          <h3>
+            <a href="https://code-tim.github.io/unit-4-game/">Crystal Collector Game</a>
+          </h3>
         </div>
       </div>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" class="img-fluid" alt="Trivia Game">
+        <img src="assets/images/Turtletime.jpg" class="img-fluid" alt="TMNT Triva">
 
         <div class="wordBoxes">
-          <h3><a href=""></a>Trivia Game</h3>
+          <h3>
+            <a href="https://code-tim.github.io/TriviaGame/">TMNT Triva</a>
+          </h3>
         </div>
       </div>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" class="img-fluid" alt="Rutgers Info">
+        <img src="assets/images/moneyInTheBank.jpg" class="img-fluid" alt="WWE Got Giphy">
 
         <div class="wordBoxes">
-          <h3><a href=""></a>Rutgers Info</h3>
+          <h3>
+            <a href="https://code-tim.github.io/gotGiphy/">WWE Got Giphy</a>
+          </h3>
         </div>
       </div>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" class="img-fluid" alt="Rock Paper Scissors Game">
+        <img src="assets/images/slapsico.png" class="img-fluid" alt="Project Slaps">
 
         <div class="wordBoxes">
-          <h3><a href=""></a>Rock Paper Scissors</h3>
+          <h3>
+            <a href="https://code-guy21.github.io/Slaps/">Project Slaps</a>
+          </h3>
         </div>
       </div>
 
