--- a/Contact.html
+++ b/Contact.html
@@ -54,7 +54,7 @@
           <label for="enterEmai">Email address</label>
           <input type="email" class="form-control" id="enterEmai" aria-describedby="emailHelp"
             placeholder="example@me.com">
-          <small id="emailHelp" class="form-text text-muted">We will never share your information with anyone
+          <small id="emailHelp">We will never share your information with anyone
             else.</small>
         </div>
         <div class="form-group">
