--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,8 @@
 
         <div class="wordBoxes">
           <h3>
-            <a href="https://code-guy21.github.io/Slaps/">Project Slaps</a>
+            <!-- <a href="https://code-guy21.github.io/Slaps/">Project Slaps</a> -->
+            <a href="https://code-tim.github.io/Slaps/">Project Slaps</a>
           </h3>
         </div>
       </div>
